// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders the Navigation component > matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Navigation mb-3"
  >
    <nav
      class="navbar navbar-expand-md navbar-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          MoodFlicks
        </a>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
        >
          <ul
            class="ms-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/moods"
              >
                Moods
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/movies"
              >
                Movies
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/login"
              >
                Login
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/signup"
              >
                Sign Up
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Renders the Navigation component > renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="Navigation mb-3"
  >
    <nav
      class="navbar navbar-expand-md navbar-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          MoodFlicks
        </a>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
        >
          <ul
            class="ms-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/moods/new"
              >
                Create Mood
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/moods"
              >
                Moods
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/movies"
              >
                Movies
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/users/testuser"
              >
                Profile
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                data-discover="true"
                href="/"
              >
                Log out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
